--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-pandas
-numpy
+streamlit==1.45.1
+pandas==2.2.3
+numpy==2.1.3
 matplotlib
-seaborn
-scikit-learn
-joblib
-catboost
-xgboost
+seaborn==0.13.2
+scikit-learn==1.6.1
+joblib==1.4.2
+catboost==1.2.8
+xgboost==3.1.2
